RESOLVED FIXED148233
[WinCairo] Link errors when building with VS2015.
https://bugs.webkit.org/show_bug.cgi?id=148233
Summary [WinCairo] Link errors when building with VS2015.
peavo
Reported 2015-08-20 11:08:56 PDT
We have to include some inline function definitions. I am not sure why this only seems to be needed with VS2015.
Attachments
Patch (1.81 KB, patch)
2015-08-20 11:19 PDT, peavo
no flags
peavo
Comment 1 2015-08-20 11:19:11 PDT
peavo
Comment 2 2015-08-20 11:51:33 PDT
Thanks for reviewing :)
WebKit Commit Bot
Comment 3 2015-08-20 12:16:42 PDT
Comment on attachment 259481 [details] Patch Clearing flags on attachment: 259481 Committed r188695: <http://trac.webkit.org/changeset/188695>
WebKit Commit Bot
Comment 4 2015-08-20 12:16:45 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.