[WinCairo] Link errors when building with VS2015. https://bugs.webkit.org/show_bug.cgi?id=148233

Reviewed by Alex Christensen.

Include some inline function definitions.

* bindings/js/JSWebGLRenderingContextCustom.cpp:
* html/canvas/WebGLRenderingContext.cpp:


Canonical link: https://commits.webkit.org/166349@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@188695 268f45cc-cd09-0410-ab3c-d52691b4dbfc