Source/WebCore/bindings/js/JSWebGLRenderingContextCustom.cpp
@@ -28,6 +28,8 @@
 #if ENABLE(WEBGL)
 #include "JSWebGLRenderingContext.h"
 #include "DOMWrapperWorld.h"
+#include <JavaScriptCore/JSCellInlines.h>
+#include <JavaScriptCore/StructureInlines.h>
 #include <heap/SlotVisitorInlines.h>
 
 using namespace JSC;
